--- a/begin_table_centering_resizebox_linewidth__1.tex
+++ b/begin_table_centering_resizebox_linewidth__1.tex
@@ -1,5 +1,43 @@
 \begin{table}
 \centering
+\iflatexml
+\begin{tabular}{llllll}
+\toprule
+{} & 5 &          6 & 7 & 8 & 9 \\
+\midrule
+TR                    &                   8.21 &                        7.80 &                     9 &               8.21 &                 6.99 \\
+TE                    &                   3.22 &                        2.90 &                  4.00 &               3.81 &                 3.16 \\
+Strength              &                      3 &                           3 &                     3 &                  3 &                    3 \\
+TI                    &                    450 &                         450 &                  1000 &            1016.30 &                  900 \\
+Flip Angle            &                     12 &                          12 &                     8 &                  8 &                    9 \\
+Make                  &                     GE &                          GE &                    Ph &                 Ph &                   Ph \\
+Voxel Size            &                  .94x.94x1 &                     1x1x1.2 &                 1x1x1 &              1x1x1 &                1x1x1 \\
+Distortion Correction &                      N &                           Y &                     Y &                  Y &                    Y \\
+Parallel Imaging      &                      2 &                           2 &                     3 &                  2 &                    - \\
+FOV                   &                      240x240x172 &                 256x256x166 &           240x240x170 &        240x240x160 &          256x256x204 \\
+Read Out Direction    &                      HF &                          FH &                    AP &                 FH &                   FH \\
+Head coil \# channels  &                      8 &                           8 &                    16 &                 32 &                    8 \\
+Model                 &              MR750 &                  Signa HDxt &               Achieva &         Achieva TX &               Intera \\
+OS                    &                      DV24 &            HD23.0\_V01\_1210a &               3.2.3.2 &              5.1.7 &                3.2.3 \\
+Acq. Time (min)       &               5:02 &  7:11 &              05:55 &           05:38 &             08:30:00 \\
+orientation           &               sag &                         sag &                   sag &                sag &                  sag \\
+Amyg (L)              &                   .67 &                        .89 &                  .66 &               .85 &                 0.97 \\
+Amyg (R)              &                   .88 &                        .79 &                  .91 &               .94 &                 0.94 \\
+Caud (L)              &                   .96 &                        .98 &                  .98 &               .97 &                 0.98 \\
+Caud (R)              &                   .95 &                        .96 &                  .98 &               .93 &                 0.96 \\
+GMV                   &                   1 &                        .99 &                  .99 &               .98 &                 0.99 \\
+Hipp (L)              &                   .51 &                        .97 &                  .83 &               .90 &                 0.99 \\
+Hipp (R)              &                   .95 &                        .96 &                  .93 &               .96 &                 0.99 \\
+Thal (L)              &                   .97 &                        .81 &                  .94 &               .80 &                 0.88 \\
+Thal (R)              &                   .70 &                        .87 &                  .96 &               .96 &                 0.97 \\
+cVol                  &                   .99 &                        .99 &                  .98 &               .98 &                 0.99 \\
+cWMV                  &                   1 &                        .99 &                  1 &               1 &                 1.00 \\
+eTIV                  &                   1 &                        1 &                  1 &               .92 &                 0.99 \\
+scGMV                 &                   .98 &                        .99 &                  .96 &               .98 &                 0.99 \\
+\bottomrule
+\end{tabular}
+\fi
+\else
 \resizebox{\linewidth}{!}{%
 \begin{tabular}{llllll}
 \toprule
