--- a/begin_table_centering_resizebox_linewidth__.tex
+++ b/begin_table_centering_resizebox_linewidth__.tex
@@ -1,5 +1,43 @@
 \begin{table}
 \centering
+\iflatexml
+\begin{tabular}{lllllll}
+\toprule
+{} & 10 & 11 & 12 & 13 & 14 & 15 \\
+\midrule
+TR                    &                 2300 &                 2300 &               2300 &                2300 &                2300 &                2000 \\
+TE                    &                 2.96 &                 2.98 &               2.98 &                2.96 &                2.96 &                3.22 \\
+Strength              &                    3 &                    3 &                  3 &                   3 &                   3 &                   3 \\
+TI                    &                  900 &                  900 &                900 &                 900 &                 900 &                 900 \\
+Flip Angle            &                    9 &                    9 &                  9 &                   9 &                   9 &                   8 \\
+Make                  &                   Si &                   Si &                 Si &                  Si &                  Si &                  Si \\
+Voxel Size            &                1x1x1 &              1x1x1.1 &              1x1x1 &               1x1x1 &               1x1x1 &               1x1x1 \\
+Distortion Correction &                    Y &                    N &                  Y &                   Y &                   Y &                   N \\
+Parallel Imaging      &                    2 &                    - &                  2 &                   2 &                   2 &                   2 \\
+FOV                   &          256x256x176 &          240x256x176 &        240x256x176 &         240x276x156 &         256x256x176 &         256x208x160 \\
+Read Out Direction    &                   HF &                   RL &                 HF &                  HF &                  HF &                  RL \\
+Head coil \# channels  &                   20 &                   32 &                 20 &                  20 &                  20 &                  32 \\
+Model                 &               Prisma &           Prisma fit &              Skyra &               Skyra &               Skyra &               Skyra \\
+OS                    &                 D13D &                VD13D &               VD13 &                VD13 &               VD13C &                VD13 \\
+Acq. Time (min)       &             05:09 &             07:46 &           05:12 &            05:12 &            05:09 &            04:56 \\
+orientation           &                  sag &                  sag &                sag &                 sag &                 sag &                  ax \\
+Amyg (L)              &                 .83 &                 .89 &               .80 &                .85 &                .98 &                .89 \\
+Amyg (R)              &                 .94 &                 .92 &               .93 &                .85 &                .93 &                .84 \\
+Caud (L)              &                 .99 &                 .99 &               .98 &                .99 &                .98 &                .98 \\
+Caud (R)              &                 .99 &                 .96 &               .95 &                .95 &                .98 &                .97 \\
+GMV                   &                 .99 &                 .98 &               .99 &                1   &                .99 &                .97 \\
+Hipp (L)              &                 .94 &                 .98 &               .99 &                .95 &                .97 &                .98 \\
+Hipp (R)              &                 .91 &                 .94 &               .97 &                .98 &                .95 &                .96 \\
+Thal (L)              &                 .92 &                 .87 &               .87 &                .76 &                .91 &                .89 \\
+Thal (R)              &                 .74 &                 .93 &               .80 &                .91 &                .93 &                .89 \\
+cVol                  &                 .99 &                 .98 &               .98 &                1   &                .99 &                .96 \\
+cWMV                  &                 1   &                 1   &               1   &                1   &                1   &                .97 \\
+eTIV                  &                 1   &                 1   &               1   &                1   &                1   &                .97 \\
+scGMV                 &                 .98 &                 .99 &               .98 &                .98 &                .99 &                .99 \\
+\bottomrule
+\end{tabular}}
+\fi
+\else
 \resizebox{\linewidth}{!}{%
 \begin{tabular}{lllllll}
 \toprule
