--- a/tab_acquisition2.tex
+++ b/tab_acquisition2.tex
@@ -1,6 +1,43 @@
 \begin{table}
-[]
 \centering
+\iflatexml
+\begin{tabular}{llllll}
+\toprule
+{} & 16 & 17& 18 & 19 & 20 \\
+\midrule
+TR                    &               2300 &               2150 &               1900 &               1900 &               1800 \\
+TE                    &               2.98 &               3.40 &               3.03 &               2.52 &               3.01 \\
+Strength              &                  3 &                  3 &                  3 &                  3 &                  3 \\
+TI                    &                900 &               1100 &                900 &                900 &                900 \\
+Flip Angle            &                  9 &                  8 &                  9 &                  9 &                  9 \\
+Make                  &                 Si &                 Si &                 Si &                 Si &                 Si \\
+Voxel Size            &              1x1x1 &              1x1x1 &              1x1x1 &              1x1x1 &        .86x.86x.86 \\
+Distortion Correction &                  N &                  N &                 N  &                  N &                  N \\
+Parallel Imaging      &                  2 &                  2 &                  2 &                  2 &                  2 \\
+FOV                   &        256x256x176 &        256x256x192 &        256x256x176 &        256x256x192 &        220x220x179 \\
+Read Out Direction    &                 HF &                 RL &                 AP &                 FH &                 FH \\
+Head coil \# channels  &                 12 &                 12 &                 12 &                 32 &                 32 \\
+Model                 &               Trio &               Trio &               Trio &               Trio &               Trio \\
+OS                    &              MRB17 &               VB17 &              VB17A &               VB17 &              MRB19 \\
+Acq. Time (min)       &           05:03 &           04:59 &           04:26 &           05:26 &           06:25 \\
+orientation           &                sag &                 ax &                sag &                sag &                sag \\
+Amyg (L)              &               .55 &               .88 &               .77 &               .88 &               .91 \\
+Amyg (R)              &               .85 &               .93 &               .81 &               .94 &               .93 \\
+Caud (L)              &               .99 &               .95 &               .97 &               .97 &               .97 \\
+Caud (R)              &               .97 &               .92 &               .98 &               .91 &               .95 \\
+GMV                   &               .99 &               .99 &               .98 &               .99 &               1   \\
+Hipp (L)              &               .71 &               .96 &               .94 &               .93 &               .96 \\
+Hipp (R)              &               .94 &               .94 &               .92 &               .83 &               .96 \\
+Thal (L)              &               .45 &               .85 &               .80 &               .80 &               .88 \\
+Thal (R)              &               .61 &               .95 &               .85 &               .96 &               .79 \\
+cVol                  &               .99 &               .98 &               .96 &               .99 &               1   \\
+cWMV                  &               1   &               .99 &               .99 &               1   &               1   \\
+eTIV                  &               .97 &               1   &               1   &               1   &               1   \\
+scGMV                 &               .98 &               .98 &               .98 &               .98 &               .98 \\
+\bottomrule
+\end{tabular}
+\fi
+\else
 \resizebox{\linewidth}{!}{%
 \begin{tabular}{llllll}
 \toprule
