--- a/begin_table_centering_begin_tabular__.tex
+++ b/begin_table_centering_begin_tabular__.tex
@@ -21,6 +21,8 @@ Model                 &           Signa LX &            Achieva &               
 OS                    &                11x &               2.50 &                VD13B &                 B17A \\
 Acq. Time (min)       &           06:24 &           05:34 &             04:58 &             08:56 \\
 orientation           &                sag &                sag &                  sag &                  sag \\
+\# scans              & 24/24 & 24/24 & 24/24 &18/18\\
+\midrule
 Amyg (L)              &               .93 &               .89 &                 .61 &                 .96 \\
 Amyg (R)              &               .93 &               .90 &                 .83 &                 .88 \\
 Caud (L)              &               .96 &               .96 &                 .98 &                 .99 \\
