--- a/begin_table_centering_iflatexml_begin__.tex
+++ b/begin_table_centering_iflatexml_begin__.tex
@@ -21,6 +21,8 @@ Model                 &              MR750 &                  Signa HDxt &      
 OS                    &                      DV24 &            HD23.0\_V01\_1210a &               3.2.3.2 &              5.1.7 &                3.2.3 \\
 Acq. Time (min)       &               5:02 &  7:11 &              05:55 &           05:38 &             08:30:00 \\
 orientation           &               sag &                         sag &                   sag &                sag &                  sag \\
+\# scans & 24/24 & 24/24 & 24/24 & 24/24 & 21/22 \\
+\midrule
 Amyg (L)              &                   .67 &                        .89 &                  .66 &               .85 &                 0.97 \\
 Amyg (R)              &                   .88 &                        .79 &                  .91 &               .94 &                 0.94 \\
 Caud (L)              &                   .96 &                        .98 &                  .98 &               .97 &                 0.98 \\
@@ -58,6 +60,8 @@ Model                 &              MR750 &                  Signa HDxt &      
 OS                    &                      DV24 &            HD23.0\_V01\_1210a &               3.2.3.2 &              5.1.7 &                3.2.3 \\
 Acq. Time (min)       &               5:02 &  7:11 &              05:55 &           05:38 &             08:30:00 \\
 orientation           &               sag &                         sag &                   sag &                sag &                  sag \\
+\# scans & 24/24 & 24/24 & 24/24 & 24/24 & 21/22 \\
+\midrule
 Amyg (L)              &                   .67 &                        .89 &                  .66 &               .85 &                 0.97 \\
 Amyg (R)              &                   .88 &                        .79 &                  .91 &               .94 &                 0.94 \\
 Caud (L)              &                   .96 &                        .98 &                  .98 &               .97 &                 0.98 \\
