--- a/begin_table_centering_iflatexml_begin__1.tex
+++ b/begin_table_centering_iflatexml_begin__1.tex
@@ -21,6 +21,8 @@ Model                 &               Prisma &           Prisma fit &           
 OS                    &                 D13D &                VD13D &               VD13 &                VD13 &               VD13C &                VD13 \\
 Acq. Time (min)       &             05:09 &             07:46 &           05:12 &            05:12 &            05:09 &            04:56 \\
 orientation           &                  sag &                  sag &                sag &                 sag &                 sag &                  ax \\
+\# scans & 22/22 & 24/24 & 25/25 & 23/24 & 23/24 &22/22 \\
+\midrule
 Amyg (L)              &                 .83 &                 .89 &               .80 &                .85 &                .98 &                .89 \\
 Amyg (R)              &                 .94 &                 .92 &               .93 &                .85 &                .93 &                .84 \\
 Caud (L)              &                 .99 &                 .99 &               .98 &                .99 &                .98 &                .98 \\
@@ -58,6 +60,8 @@ Model                 &               Prisma &           Prisma fit &           
 OS                    &                 D13D &                VD13D &               VD13 &                VD13 &               VD13C &                VD13 \\
 Acq. Time (min)       &             05:09 &             07:46 &           05:12 &            05:12 &            05:09 &            04:56 \\
 orientation           &                  sag &                  sag &                sag &                 sag &                 sag &                  ax \\
+\# scans & 22/22 & 24/24 & 25/25 & 23/24 & 23/24 &22/22 \\
+\midrule
 Amyg (L)              &                 .83 &                 .89 &               .80 &                .85 &                .98 &                .89 \\
 Amyg (R)              &                 .94 &                 .92 &               .93 &                .85 &                .93 &                .84 \\
 Caud (L)              &                 .99 &                 .99 &               .98 &                .99 &                .98 &                .98 \\
