--- a/tab_acquisition2.tex
+++ b/tab_acquisition2.tex
@@ -21,6 +21,8 @@ Model                 &               Trio &               Trio &               
 OS                    &              MRB17 &               VB17 &              VB17A &               VB17 &              MRB19 \\
 Acq. Time (min)       &           05:03 &           04:59 &           04:26 &           05:26 &           06:25 \\
 orientation           &                sag &                 ax &                sag &                sag &                sag \\
+\# scans & 24/24 & 23/24 & 23/24 & 24/24 & 24/24 \\
+\midrule
 Amyg (L)              &               .55 &               .88 &               .77 &               .88 &               .91 \\
 Amyg (R)              &               .85 &               .93 &               .81 &               .94 &               .93 \\
 Caud (L)              &               .99 &               .95 &               .97 &               .97 &               .97 \\
@@ -58,6 +60,8 @@ Model                 &               Trio &               Trio &               
 OS                    &              MRB17 &               VB17 &              VB17A &               VB17 &              MRB19 \\
 Acq. Time (min)       &           05:03 &           04:59 &           04:26 &           05:26 &           06:25 \\
 orientation           &                sag &                 ax &                sag &                sag &                sag \\
+\# scans & 24/24 & 23/24 & 23/24 & 24/24 & 24/24 \\
+\midrule
 Amyg (L)              &               .55 &               .88 &               .77 &               .88 &               .91 \\
 Amyg (R)              &               .85 &               .93 &               .81 &               .94 &               .93 \\
 Caud (L)              &               .99 &               .95 &               .97 &               .97 &               .97 \\
