--- a/header.tex
+++ b/header.tex
@@ -15,6 +15,7 @@
 \usepackage{amsmath}
 \usepackage{booktabs}
 \usepackage{rotating}
+\usepackage{float}
 \usepackage{graphicx}
 %\usepackage[font=footnotesize, labelfont={sf,bf}, margin=1cm]{caption}
 \iflatexml
