--- a/header.tex
+++ b/header.tex
@@ -20,6 +20,7 @@
 %\usepackage[font=footnotesize, labelfont={sf,bf}, margin=1cm]{caption}
 \iflatexml
 \else
+\newcommand\mathplus{+}
 %\usepackage{authblk} % Not (yet) supported by LaTeXML.
 %\usepackage{fullpage}
 %\renewcommand\Authfont{\fontsize{10}{14.4}\selectfont}
