--- a/authors.tex
+++ b/authors.tex
@@ -59,63 +59,177 @@ Roland G. Henry\footnote[1,2,11]{Department of Neurology, University California,
 
 \else % PDF export commands go here
 
-\author[l1,l2]{Anisha Keshavan}
+\author[l1,l2]{Anisha Keshavan\corref{cor1}}
+\ead{anisha.keshavan@ucsf.edu}
+\cortext[cor1]{Corresponding author}
+
 \author[3]{Friedemann Paul}
+\ead{Friedemann.Paul@charite.de}
+
 \author[4]{Mona K. Beyer}
+\ead{mona.beyer@lyse.net}
+
 \author[l1]{Alyssa H. Zhu}
+\ead{Alyssa.Zhu@ucsf.edu}
+
 \author[l1]{Nico Papinutto}
+\ead{Nico.Papinutto@ucsf.edu}
+
 \author[5]{Russell T. Shinohara}
+\ead{rshi@mail.med.upenn.edu}
+
 \author[l1]{William Stern}
+\ead{William.Stern@ucsf.edu}
+
 \author[6]{Michael Amann}
+\ead{michael.amann@usb.ch}
+
 \author[7]{Rohit Bakshi}
+\ead{rbakshi@post.harvard.edu}
+
 \author[l1,6,8]{Antje Bischof}
+\ead{antje.Bischof@ucsf.edu}
+
 \author[9]{Alessandro Carriero}
+\ead{alessandro.carriero@med.unipmn.it}
+
 \author[10]{Manuel Comabella}
+\ead{manuel.comabella@vhir.org}
+
 \author[11]{Jason C. Crane}
+\ead{Jason.Crane@ucsf.edu}
+
 \author[12]{Sandra D’Alfonso}
+\ead{sandra.dalfonso@med.uniupo.it}
+
 \author[13]{Philippe Demaerel}
+\ead{Philippe.Demaerel@uzleuven.be}
+
 \author[14]{Benedicte Dubois}
+\ead{Benedicte.dubois@uzleuven.be}
+
 \author[15]{Massimo Filippi}
+\ead{zonca.lucia@hsr.it}
+
 \author[16]{Vinzenz Fleischer}
+\ead{Vinzenz.Fleischer@unimedizin-mainz.de}
+
 \author[17]{Bertrand Fontaine}
+\ead{bertrand.fontaine@upmc.fr}
+
 \author[6,18]{Laura Gaetano}
+\ead{laura.gaetanosf@gmail.com}
+
 \author[14]{An Goris}
+\ead{An.Goris@med.kuleuven.be}
+
 \author[16]{Christiane Graetz}
+\ead{Christiane.Graetz@unimedizin-mainz.de}
+
 \author[16]{Adriane Gröger}
+\ead{adriane.groeger@unimedizin-mainz.de}
+
 \author[16]{Sergiu Groppa}
+\ead{Sergiu.Groppa@unimedizin-mainz.de}
+
 \author[19]{David A. Hafler}
+\ead{david.hafler@yale.edu}
+
 \author[20]{Hanne F. Harbo}
+\ead{h.f.harbo@medisin.uio.no}
+
 \author[21,22]{Bernhard Hemmer}
+\ead{hemmer@tum.de}
+
 \author[l1,l2]{Kesshi Jordan}
+\ead{Kesshi.Jordan@ucsf.edu}
+
 \author[6]{Ludwig Kappos}
+\ead{Ludwig.Kappos@usb.ch}
+
 \author[11]{Gina Kirkish}
+\ead{Gina.Kirkish@ucsf.edu}
+
 \author[23]{Sara Llufriu}
+\ead{SLLUFRIU@clinic.ub.es}
+
 \author[6]{Stefano Magon}
+\ead{Stefano.Magon@usb.ch}
+
 \author[15]{Filippo Martinelli-Boneschi}
+\ead{martinelli.filippo@hsr.it}
+
 \author[24]{Jacob McCauley}
+\ead{jmccauley@med.miami.edu}
+
 \author[10]{Xavier Montalban}
+\ead{xavier.montalban@cem-cat.org}
+
 \author[21,25]{Mark Muhlau}
+\ead{muehlau@lrz.tu-muenchen.de}
+
 \author[19]{Daniel Pelletier}
+\ead{daniel.pelletier@yale.edu}
+
 \author[24]{Pradip M. Pattany}
+\ead{PPattany@med.miami.edu}
+
 \author[24]{Margaret Pericak-Vance}
+\ead{MPericak@med.miami.edu}
+
 \author[17]{Isabelle Rebeix}
+\ead{isabelle.rebeix@upmc.fr}
+
 \author[15]{Maria Rocca}
+\ead{rocca.mara@hsr.it}
+
 \author[10]{Alex Rovira}
+\ead{alex.rovira@idi.gencat.cat}
+
 \author[l1,6,8]{Regina Schlaeger}
+\ead{regina.schlaeger@ucsf.edu}
+
 \author[23]{Albert Saiz}
+\ead{ASAIZ@clinic.ub.es}
+
 \author[6,26]{Till Sprenger}
+\ead{Till.sprenger@usb.ch}
+
 \author[27]{Alessandro Stecco}
+\ead{a.stecco@libero.it}
+
 \author[28]{Bernard M.J. Uitdehaag}
+\ead{bmj.uitdehaag@vumc.nl}
+
 \author[23]{Pablo Villoslada}
+\ead{Pablo.VillosladaDiaz@ucsf.edu}
+
 \author[28]{Mike P. Wattjes}
+\ead{m.wattjes@vumc.nl}
+
 \author[7]{Howard Weiner}
+\ead{hweiner@rics.bwh.harvard.edu}
+
 \author[3,29]{Jens Wuerfel}
+\ead{jw@miac.ch}
+
 \author[30]{Claus Zimmer}
+\ead{claus.zimmer@tum.de}
+
 \author[16]{Frauke Zipp}
+\ead{Frauke.zipp@unimedizin-mainz.de}
+
 \author[31]{International Multiple Sclerosis Genetics Consortium}
+\ead{AIVINSON@PARTNERS.ORG}
+
 \author[l1]{Stephen Hauser}
+\ead{Stephen.Hauser@ucsf.edu}
+
 \author[l1]{Jorge R. Oksenberg}
+\ead{Jorge.Oksenberg@ucsf.edu}
+
 \author[l1,l2,11]{Roland G. Henry}
+\ead{Roland.Henry@ucsf.edu}
 
 \address[l1]{Department of Neurology, University California, San Francisco,  USA}
 \address[l2]{UC Berkeley - UCSF Graduate Program in Bioengineering, San Francisco, USA}
