analysis is singular, thus "is reliable"

--- a/The_pooled_metaanaly.tex
+++ b/The_pooled_metaanaly.tex
@@ -1,2 +1,2 @@
-The pooled  or meta-analysis of regional brain volumes derived from T1-weighted MRI data across multiple sites are reliable when data is acquired with similar acquisition parameters \cite{cannon2014,multicenter01,freesurferReliability}. The inherent scanner- and sequence-related noise of MRI volumetrics under heterogeneous acquisition parameters has prompted many groups to standardize protocols across imaging sites \cite{cannon2014,adniharmonize,ADNIReview}. However, standardization across multiple sites can be prohibitively expensive and requires a significant effort to implement and maintain. %For example, researchers must install equivalent pulse sequences across a range of scanning platforms and hardware, and 
+The pooled  or meta-analysis of regional brain volumes derived from T1-weighted MRI data across multiple sites is reliable when data is acquired with similar acquisition parameters \cite{cannon2014,multicenter01,freesurferReliability}. The inherent scanner- and sequence-related noise of MRI volumetrics under heterogeneous acquisition parameters has prompted many groups to standardize protocols across imaging sites \cite{cannon2014,adniharmonize,ADNIReview}. However, standardization across multiple sites can be prohibitively expensive and requires a significant effort to implement and maintain. %For example, researchers must install equivalent pulse sequences across a range of scanning platforms and hardware, and 
 At the other end of the spectrum, multisite studies without standardization can also be successful albeit with extremely large sample sizes. The ENIGMA consortium, for example, combined scans of over 10,000 subjects from 25 sites with varying field strengths, scanner makes, acquisition protocols, and processing pipelines, providing robust phenotypic traits despite the variability of non-standardized MRI volumetrics and the power required to run a genome wide association study (GWAS) to identify modest effect sizes \cite{thompson2014enigma}. These studies raise the following question: Is there a middle ground between fully standardizing a set of MRI scanners, and recruiting thousands of subjects across a large number of sites? A multisite study without a harmonization requirement could be cost-effective, because it could include retrospectively acquired data, and data from sites with ongoing longitudinal studies that would not want to adjust their acquisition parameters.
