healthy aging is a neurological condition :)

--- a/In_this_study_we.tex
+++ b/In_this_study_we.tex
@@ -1,1 +1,1 @@
-Regional brain volumes are of interest in most neurological conditions as well as healthy aging, and typically indicates the degree of neuronal degeneration. In this study, we investigate a number of well-defined regional brain volumetrics related to multiple sclerosis disease progression. Even though focal white matter lesions seen on MRI largely characterize multiple sclerosis (MS), lesion volumes are not strongly correlated with clinical disability \cite{lesions1,lesions2,lesions3}. Instead, global gray matter atrophy correlates better with clinical disability (for a review, see \cite{horakova2012clinical}), along with white matter volume, to a lesser extent \cite{white1}. In addition, regional gray matter atrophy measurements, such as thalamus \cite{thal1,thal2,thal3,thal4} and caudate \cite{caud1,caud2} volumes, appear to be better predictors of disability \cite{gm1,gm2,gm3,gm4}.   %The sites included in this study are part of the International Multiple Sclerosis Genetics Consortium (IMSGC), which aims to integrate clinical, genomic, and imaging data to understand the mechanisms of neurodegeneration in multiple sclerosis.
+Regional brain volumes are of interest in most neurological conditions, including healthy aging, and typically indicates the degree of neuronal degeneration. In this study, we investigate a number of well-defined regional brain volumetrics related to multiple sclerosis disease progression. Even though focal white matter lesions seen on MRI largely characterize multiple sclerosis (MS), lesion volumes are not strongly correlated with clinical disability \cite{lesions1,lesions2,lesions3}. Instead, global gray matter atrophy correlates better with clinical disability (for a review, see \cite{horakova2012clinical}), along with white matter volume, to a lesser extent \cite{white1}. In addition, regional gray matter atrophy measurements, such as thalamus \cite{thal1,thal2,thal3,thal4} and caudate \cite{caud1,caud2} volumes, appear to be better predictors of disability \cite{gm1,gm2,gm3,gm4}.   %The sites included in this study are part of the International Multiple Sclerosis Genetics Consortium (IMSGC), which aims to integrate clinical, genomic, and imaging data to understand the mechanisms of neurodegeneration in multiple sclerosis.
