--- a/To_our_knowledge_thi.tex
+++ b/To_our_knowledge_thi.tex
@@ -1,1 +1,1 @@
-To our knowledge, this is the first report measuring scaling factors between sites with non-standardized protocols using a single set of subjects, and deriving an equation for power that takes this scaling into account via mixed modeling. This study builds off the work of \cite{fennema2007feasibility}, which looked at the feasibility of pooling retrospective data from three different sites with non-standardized sequences using standard pooling, mixed effects modeling, and fixed effects modeling, and found that mixed effects and fixed effects outperformed standard pooling. Our statistical model specifies how MRI bias between sites affects the mixed effects model, however, it is limited to powering cross-sectional designs. Jones and colleagues have derived sample size calculations for longitudinal studies acquired under heterogeneous conditions without the use of calibration subjects \cite{jones2013quantification}. This can be extremely useful for studies measuring longitudinal atrophy over long time periods, during which scanners and protocols may change. For the cross-sectional case, the use of random effects modeling enables us to generalize our results to any protocol with acquisition parameters similar to those described here. If protocols change drastically compared to our sample of 3D MPRAGE-type protocols, healthy controls should be scanned before and after any major software, hardware, or protocol changes, and scaling factors should be compared to the distribution of scaling factors ($CV_a$) reported in this study.
+To our knowledge, this is the first report measuring scaling factors between sites with non-standardized protocols using a single set of subjects, and deriving an equation for power that takes this scaling into account via mixed modeling. This study builds off the work of \cite{fennema2007feasibility}, which looked at the feasibility of pooling retrospective data from three different sites with non-standardized sequences using standard pooling, mixed effects modeling, and fixed effects modeling, and found that mixed effects and fixed effects outperformed standard pooling. Our statistical model specifies how MRI bias between sites affects the mixed effects model, however, it is limited to powering cross-sectional designs. Jones and colleagues have derived sample size calculations for longitudinal studies acquired under heterogeneous conditions without the use of calibration subjects \cite{jones2013quantification}. This can be extremely useful for studies measuring longitudinal atrophy over long time periods, during which scanners and protocols may change. For the cross-sectional case, the use of random effects modeling enables us to generalize our results to any protocol with acquisition parameters similar to those described here. If protocols change drastically compared to our sample of 3D MPRAGE-type protocols, healthy controls should be scanned before and after any major software, hardware, or protocol changes, and scaling factors should be compared to the distribution of scaling factors ($CV_a$) reported in this study. The impact of non-MPRAGE type scans on $CV_a$ remains an open question that should be investigated, because a large $CV_a$ can severely impact the power of a multisite study.
