--- a/In_this_study_we1.tex
+++ b/In_this_study_we1.tex
@@ -1,1 +1,1 @@
-In this study, we reported reliability using between-site ICC and $CV_{a}$, because they have different advantages and disadvantages. The disadvantage of only reporting ICCs as a reliability metric is that it depends on the true subject-level variability studied. Since we scanned healthy controls, our variance component estimates of subject variability may be lower than that of our target population, patients with multiple sclerosis related atrophy. As a result, ICCs may be lower than expected in MS based on the results of healthy controls. We tried to address this issue by scanning subjects in a large age range, capturing the variability in gray and white matter volume due to atrophy from aging. On the other hand, $CV_{a}$ is invariant to true subject variability, but it is limited by the accuracy of between-site scaling estimates. It is, therefore, important to report both between-site ICC and $CV_{a}$ when evaluating multisite reliability datasets to understand a given algorithm's ability to differentiate between subjects (via the ICC) and the magnitude of systemic error between sites ($CV_{a}$), which could be corrected via harmonization.
+In this study, we reported reliability using both between-site ICC and $CV_{a}$ because these two metrics have complementary advantages. ICC depends on the true subject-level variability studied. Since we scanned healthy controls, our variance component estimates of subject variability may be lower than that of our target population (patients with multiple sclerosis related atrophy). As a result, ICCs may be lower than expected in MS based on the results of healthy controls. We tried to address this issue by scanning subjects in a large age range, capturing the variability in gray and white matter volume due to atrophy from aging. On the other hand, $CV_{a}$ is invariant to true subject variability, but is limited by the accuracy of between-site scaling estimates. Both between-site ICC and $CV_{a}$ should be reported when evaluating multisite reliability datasets to understand a given algorithm's ability to differentiate between subjects (via the ICC) and the magnitude of systemic error between sites (via the $CV_{a}$), which could be corrected using harmonization.
