--- a/Scanrescan_reliabili.tex
+++ b/Scanrescan_reliabili.tex
@@ -1,1 +1,1 @@
-Scan-rescan reliability for the 20 scanners is shown in tables \ref{tab:acquisition1} through \ref{tab:acquisition4}. The majority of scan-rescan reliabilities were greater than 80\% for the selected Freesurfer-derived volumes, which included gray matter volume (GMV), cortical white matter volume (cWMV), cortex volume (cVol), lateral ventricle (LV), thalamus (thal), amygdala (amyg), caudate (caud), hippocampus (hipp), and estimated total intracranial volume (eTIV). However, the thalamus at sites 3 and 16 had low scan-rescan reproducibility, below 70\%. The left hippocampus and amygdala at site 5 were also below 70\%, and the left amygdala at site 16 was also low, at 55\%. %The quality control process only discarded scans that had miss-classified cortical gray matter segmentation, but did not check misclassified subcortical regions due to time restrictions.
+Scan-rescan reliability for the 20 scanners is shown in tables 1 through \ref{tab:acquisition4}. The majority of scan-rescan reliabilities were greater than 80\% for the selected Freesurfer-derived volumes, which included gray matter volume (GMV), cortical white matter volume (cWMV), cortex volume (cVol), lateral ventricle (LV), thalamus (thal), amygdala (amyg), caudate (caud), hippocampus (hipp), and estimated total intracranial volume (eTIV). However, the thalamus at sites 3 and 16 had low scan-rescan reproducibility, below 70\%. The left hippocampus and amygdala at site 5 were also below 70\%, and the left amygdala at site 16 was also low, at 55\%. %The quality control process only discarded scans that had miss-classified cortical gray matter segmentation, but did not check misclassified subcortical regions due to time restrictions.
