--- a/begin_table_H_centering_begin__.tex
+++ b/begin_table_H_centering_begin__.tex
@@ -4,16 +4,16 @@
 \toprule
 {} & 1 & 2 & 3 & 4 \\
 \midrule
-TR                    &               8.18 &               7.10 &                 2130 &                 2080 \\
-TE                    &               3.86 &               3.20 &                 2.94 &                 3.10 \\
-Strength              &               1.50 &               1.50 &                 1.50 &                 1.50 \\
-TI                    &                300 &             862.90 &                 1100 &                 1100 \\
-Flip Angle            &                 20 &                  8 &                   15 &                   15 \\
+TR (ms)                   &               8.18 &               7.10 &                 2130 &                 2080 \\
+TE (ms)                   &               3.86 &               3.20 &                 2.94 &                 3.10 \\
+Strength (T)              &               1.50 &               1.50 &                 1.50 &                 1.50 \\
+TI (ms)                   &                300 &             862.90 &                 1100 &                 1100 \\
+Flip Angle ($^\circ$)            &                 20 &                  8 &                   15 &                   15 \\
 Make                  &                 GE &                 Ph &                   Si &                   Si \\
-Voxel Size            &        .94x.94x1.2 &              1x1x1 &                1x1x1 &            .97x.97x1 \\
+Voxel Size (mm)           &        .94x.94x1.2 &              1x1x1 &                1x1x1 &            .97x.97x1 \\
 Distortion Correction &                  N &                  N &                    N &                    Y \\
 Parallel Imaging      &                  - &                  2 &                    2 &                    - \\
-FOV                   &        240x240x200 &        256x256x160 &          256x256x176 &          234x250x160 \\
+FOV (mm)                   &        240x240x200 &        256x256x160 &          256x256x176 &          234x250x160 \\
 Read Out Direction    &                 HF &                 AP &                   HF &                   HF \\
 Head coil \# channels  &                  2* &                  8 &                   20 &                   12 \\
 Model                 &           Signa LX &            Achieva &               Avanto &               Avanto \\
