--- a/begin_table_centering_iflatexml_begin__1.tex
+++ b/begin_table_centering_iflatexml_begin__1.tex
@@ -5,16 +5,16 @@
 \toprule
 {} & 10 & 11 & 12 & 13 & 14 & 15 \\
 \midrule
-TR                    &                 2300 &                 2300 &               2300 &                2300 &                2300 &                2000 \\
-TE                    &                 2.96 &                 2.98 &               2.98 &                2.96 &                2.96 &                3.22 \\
-Strength              &                    3 &                    3 &                  3 &                   3 &                   3 &                   3 \\
-TI                    &                  900 &                  900 &                900 &                 900 &                 900 &                 900 \\
-Flip Angle            &                    9 &                    9 &                  9 &                   9 &                   9 &                   8 \\
+TR (ms)                   &                 2300 &                 2300 &               2300 &                2300 &                2300 &                2000 \\
+TE (ms)                   &                 2.96 &                 2.98 &               2.98 &                2.96 &                2.96 &                3.22 \\
+Strength (T)              &                    3 &                    3 &                  3 &                   3 &                   3 &                   3 \\
+TI (ms)                   &                  900 &                  900 &                900 &                 900 &                 900 &                 900 \\
+Flip Angle ($^circ$)            &                    9 &                    9 &                  9 &                   9 &                   9 &                   8 \\
 Make                  &                   Si &                   Si &                 Si &                  Si &                  Si &                  Si \\
-Voxel Size            &                1x1x1 &              1x1x1.1 &              1x1x1 &               1x1x1 &               1x1x1 &               1x1x1 \\
+Voxel Size (mm)            &                1x1x1 &              1x1x1.1 &              1x1x1 &               1x1x1 &               1x1x1 &               1x1x1 \\
 Distortion Correction &                    Y &                    N &                  Y &                   Y &                   Y &                   N \\
 Parallel Imaging      &                    2 &                    - &                  2 &                   2 &                   2 &                   2 \\
-FOV                   &          256x256x176 &          240x256x176 &        240x256x176 &         240x276x156 &         256x256x176 &         256x208x160 \\
+FOV (mm)                  &          256x256x176 &          240x256x176 &        240x256x176 &         240x276x156 &         256x256x176 &         256x208x160 \\
 Read Out Direction    &                   HF &                   RL &                 HF &                  HF &                  HF &                  RL \\
 Head coil \# channels  &                   20 &                   32 &                 20 &                  20 &                  20 &                  32 \\
 Model                 &               Prisma &           Prisma fit &              Skyra &               Skyra &               Skyra &               Skyra \\
